[gd_scene load_steps=20 format=2]

[ext_resource path="res://Actors/FinalBoss2.gd" type="Script" id=1]
[ext_resource path="res://Actors/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/FinalBoss/Demon/demon.png" type="Texture" id=3]
[ext_resource path="res://Weapons/Weapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actors/IABoss.gd" type="Script" id=5]
[ext_resource path="res://Actors/Team.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/kenney_topdowntanksredux/Spritesheet/onlyObjects_default.png" type="Texture" id=7]
[ext_resource path="res://Sounds/DeathEnemy.mp3" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 1.39472, 7.75684, 60.2974, 53.6955 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.5003, 44.9999 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 876.002, 1220 )

[sub_resource type="Animation" id=3]
resource_name = "DeathAnimation"
length = 0.15
step = 0.01
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathSound2/DeathFlash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeathSound2/DeathFlash:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.1, 0.3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 257.812, 255.83, 61.6011, 63.1411 )

[sub_resource type="Animation" id=8]
resource_name = "Fase 2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 10 ) ]
}

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 453.324, 256.178, 57.56, 63.6851 )

[sub_resource type="Animation" id=9]
resource_name = "Fase 3"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 11 ) ]
}

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 195.42, 255.011, 58.6762, 65.2623 )

[sub_resource type="Animation" id=7]
resource_name = "Fase1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ SubResource( 5 ), SubResource( 6 ) ]
}

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 60, 330, 60, 62 )

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 156, -1016 )
rotation = 1.57079
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -18.4293, -0.0565643 )
rotation = 1.5708
scale = Vector2( 1.75869, 1.59373 )
texture = SubResource( 5 )
region_enabled = true
region_rect = Rect2( 0.580978, 5.42697, 62.4224, 58.0333 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -10, 1.99994 )
shape = SubResource( 1 )

[node name="Weapon" parent="." instance=ExtResource( 4 )]
position = Vector2( 13, -0.999907 )

[node name="Health" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 0, -1.52588e-05 )

[node name="IABoss" type="Node2D" parent="."]
visible = false
script = ExtResource( 5 )

[node name="PlayerDetection" type="Area2D" parent="IABoss"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="IABoss/PlayerDetection"]
visible = false
position = Vector2( 111.996, 44.0028 )
shape = SubResource( 2 )

[node name="Team" parent="." instance=ExtResource( 6 )]
team = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DeathAnimation = SubResource( 3 )
"anims/Fase 2" = SubResource( 8 )
"anims/Fase 3" = SubResource( 9 )
anims/Fase1 = SubResource( 7 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="DeathSound2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.232361, -0.162598 )
rotation = -1.57079
scale = Vector2( 0.0209536, 0.0902556 )
stream = ExtResource( 8 )
volume_db = -28.0
pitch_scale = 2.5

[node name="DeathFlash" type="Sprite" parent="DeathSound2"]
visible = false
position = Vector2( 2.5752, -1.60938 )
scale = Vector2( 14.3174, 3.32389 )
texture = SubResource( 4 )

[node name="Position2D2" type="Position2D" parent="." groups=["spawn"]]
position = Vector2( 21.1814, -82.1834 )
rotation = 3.14159
scale = Vector2( 8.16275e+12, 1.58131e+13 )

[node name="Position2D" type="Position2D" parent="." groups=["spawn"]]
position = Vector2( 20.3411, 86.8502 )
scale = Vector2( 3.10293e+07, -5.90582e+07 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="IABoss/PlayerDetection" to="IABoss" method="_on_PlayerDetection_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
